19356058: Create Invoice Title alignment fixed

--- a/components/page-create-invoice/page-create-invoice.less
+++ b/components/page-create-invoice/page-create-invoice.less
@@ -13,7 +13,7 @@ page-create-invoice{
 	}
 
 	.pageTitleInv{
-	  	padding-left:50px !important;
+	  	padding-left:20px !important;
 	}
 
 	.lineDividerInvoice{
